--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -3,6 +3,7 @@
   display:flex;
     width: 1920px;
     height: 1080px;
+   
 
 }
 .aa{
@@ -14,7 +15,8 @@
   display:flex;
   width:1140px;
   height:1080px;
-  background-color: cadetblue;
+  background-image: url("../img/earth01.jpg");
+  background-position: center;
 }
 .cc{
   width: 390px;
