--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -16,7 +16,10 @@
  
     background:honeydew
   }
-
+  #nav-rignt{
+    width: 1770px;
+    height: 100%;
+  }
 .item{
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   background-color: beige;
